# MPIDiff

./: CMakeLists.txt  README.md
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/sphinx/: CMakeLists.txt  Makefile  advanced.rst  conf.py  index.rst  install.rst  make.bat  tutorial.rst
examples/: CMakeLists.txt  MPIDiff_Program1.cpp  MPIDiff_Program2.cpp  taskfile.txt
src/: CMakeLists.txt
src/mpidiff/: CMakeLists.txt  MPIDiff.cpp  MPIDiff.h  mpidiff-config.cmake.in
test/: CMakeLists.txt  TestMPIDiff.cpp  TestSynchronous.cpp
tpl/gtest-mpi-listener/: gtest-mpi-listener.hpp  gtest-mpi-listener.patch
